--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.d-center{
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.perspective-box{
+  width:80%;
+  height:60%;
+  background:rgba(255,255,255,0.166);
+  border-radius:1rem;
+  perspective: 500px;
+  perspective-origin:50% 50%;
+  position:relative;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.perspective-box:after{
+  content:'';
+  width:100%;
+  height:100%;
+  display:block;
+  position:absolute;
+  top:50%;
+  left:50%;
+  background:rgba(255,255,255,0.795);
+  border-radius: 1rem;
+  transform:translate(-50%,-50%) rotateY(25deg);
+}
+.fileControl{
+  display:flex;
+  align-items:center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position:relative;
 }
-
-.App-link {
-  color: #61dafb;
+.fileControl input{
+  position:relative;
+  opacity:0;
+  width:12rem;
+  height:12rem;
+  z-index:3;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fileControl:before{
+  content:'+';
+  font-size:3rem;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  width:12rem;
+  height:12rem;
+  position:absolute;
+  top:0;
+  left:0;
+  border:2px solid black;
+  border-radius:100%;
+}
+.Block-left,
+.Block-right,
+.Block-center{
+  display:block;
+  margin:0.5rem;
+}
+.Block-left .Block-Model,
+.Block-right .Block-Model,
+.Block-center .Block-Model{
+  width:5rem;
+  height:6rem;
+  border-radius:0.5rem;
+  background:rgb(196,196,196);
+  position:relative;
+}
+.Block-left .Block-Model:before,
+.Block-right .Block-Model:before,
+.Block-center .Block-Model:before{
+  content:'';
+  width:2.5rem;
+  height:4rem;
+  display:block;
+  position:absolute;
+  background:#0064ff;
+  border-radius:0.3rem;
+  top:16%;
+  
+}
+.Block-right .Block-Model:before{
+  right:2%;
+}
+.Block-left .Block-Model:before{
+  left:2%;
+}
+.Block-center .Block-Model:before{
+  left:50%;
+  transform:translateX(-50%);
+}
+.Block-left .Block-label,
+.Block-right .Block-label,
+.Block-center .Block-label{
+  text-align:center;
+  font-weight:bold;
+  line-height:0.5rem;
+}
+.card-header{
+  background:none;
+}
+.card-head-icon{
+  width:5rem;
+  height:5rem;
+  border-radius:0.5rem;
+  font-size:3rem;
+  color:#0090ff;
+  background:#a1cfff;
+  box-shadow:2px 2px 5px #4c4c4c,
+             inset -2px -2px -5px #d3e8fe;
 }
